--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto PWA para acompanhamento de PDV por relatório em texto incorporado.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/ErickdaMata/acompanhamentoPDV/issues"
   },
-  "homepage": "https://github.com/ErickdaMata/acompanhamentoPDV#readme"
+  "homepage": "https://github.com/ErickdaMata/acompanhamentoPDV#readme",
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "express": "4.16.3",
+    "multer": "1.3.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.12.1",
+    "nodemon": "1.17.3"
+  }
 }
