--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acompanhamentopdv",
   "version": "0.1.0",
   "description": "Projeto PWA para acompanhamento de PDV por relatório em texto incorporado.",
-  "main": "main.js",
+  "main": "./backend/server.js",
   "scripts": {
     "start": "nodemon server.js http-server"
   },
