--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ErickdaMata/acompanhamentoPDV#readme",
   "dependencies": {
+    "basic-ftp": "^4.5.4",
     "body-parser": "1.18.2",
     "express": "4.16.3",
     "multer": "1.3.0"
