--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "acompanhamentopdv",
+  "name": "acompanhamento-pdv",
   "version": "0.1.0",
+  "private": true,
   "description": "Projeto PWA para acompanhamento de PDV por relatório em texto incorporado.",
-  "main": "./backend/server.js",
   "scripts": {
-    "start": "nodemon server.js http-server"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -15,15 +17,39 @@
   "bugs": {
     "url": "https://github.com/ErickdaMata/acompanhamentoPDV/issues"
   },
-  "homepage": "https://github.com/ErickdaMata/acompanhamentoPDV#readme",
   "dependencies": {
-    "basic-ftp": "^4.5.4",
-    "body-parser": "1.18.2",
-    "express": "4.16.3",
-    "multer": "1.3.0"
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "http-server": "^0.12.1",
-    "nodemon": "1.17.3"
-  }
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11",
+    "basic-ftp": "^4.5.4"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
