--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "url": "https://github.com/ErickdaMata/acompanhamentoPDV/issues"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
