--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,23 @@
   "description": "Backend do Projeto PWA para acompanhamento de PDV. API para relatórios via FTP e login",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon index.js http-server"
   },
   "author": "Erick da Mata",
   "license": "ISC",
   "dependencies": {
+    "basic-ftp": "^4.5.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
-    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.12.3",
+    "nodemon": "^2.0.4"
   }
 }
