--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-router": "3.0.2"
+    "vue-router": "3.0.2",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
