--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js http-server"
-  },
+  }, 
   "author": "Erick da Mata",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "basic-ftp": "^4.5.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
