--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -12,8 +12,6 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
     "axios": "^0.19.2",
     "basic-ftp": "^4.5.4",
     "bcrypt-nodejs": "0.0.3",
@@ -21,6 +19,10 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.1",
+    "ftp-client": "^0.2.2",
+    "jsftp": "^2.1.3",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
