--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js http-server"
-  }, 
+  },
   "author": "Erick da Mata",
   "license": "ISC",
   "dependencies": {
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "promise-ftp": "^1.3.5"
   },
   "devDependencies": {
     "http-server": "^0.12.3",
