--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,19 @@
   "version": "0.2.0",
   "private": true,
   "description": "Projeto PWA para acompanhamento de PDV por relatório em texto incorporado.",
+  "author": "Erick da Mata",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ErickdaMata/acompanhamentoPDV.git"
-  },
-  "author": "Erick da Mata",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ErickdaMata/acompanhamentoPDV/issues"
-  },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "3.0.2",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -29,10 +23,14 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "basic-ftp": "^4.5.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "basic-ftp": "^4.5.4"
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -52,5 +50,13 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/ErickdaMata/acompanhamentoPDV/issues"
+  },
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ErickdaMata/acompanhamentoPDV.git"
+  }
 }
