--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^5.3.45",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
     "idb": "^5.0.4",
     "vue": "^2.6.11",
     "vue-router": "3.0.2",
