--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Acompanhamento de Relatórios i9PDV",
-    "short_name": "Relatórios i9PDV",
+    "name": "Relatórios Nova Tech PDV",
+    "short_name": "Nova Tech PDV",
     "icons": [
         {
             "src": "/img/icons/maskable-icon-256x256.png",
@@ -15,47 +15,57 @@
             "purpose": "maskable"
         },
         {
-            "src": "/img/icons/app-icon-48x48.png",
-            "type": "image/png",
-            "sizes": "48x48"
+            "src": "/img/icons/android-chrome-36x36.png",
+            "sizes": "36x36",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-72x72.png",
-            "type": "image/png",
-            "sizes": "72x72"
+            "src": "/img/icons/android-chrome-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-96x96.png",
-            "type": "image/png",
-            "sizes": "96x96"
+            "src": "/img/icons/android-chrome-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-144x144.png",
-            "type": "image/png",
-            "sizes": "144x144"
+            "src": "/img/icons/android-chrome-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-192x192.png",
-            "type": "image/png",
-            "sizes": "192x192"
+            "src": "/img/icons/android-chrome-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-256x256.png",
-            "type": "image/png",
-            "sizes": "256x256"
+            "src": "/img/icons/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         },
         {
-            "src": "/img/icons/app-icon-512x512.png",
-            "type": "image/png",
-            "sizes": "512x512"
+            "src": "/img/icons/android-chrome-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/img/icons/android-chrome-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/img/icons/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ],
-    "start_url": "/index.html",
+    "start_url": "/relatorios",
     "scope": ".",
     "display": "standalone",
     "orientation": "any",
     "background_color": "#F6F7EB",
     "theme_color": "#00A7E1",
-    "description": "Aplicação para visualização de relatórios de acompanhamento para clientes i9PDV.",
+    "description": "Aplicação para visualização de relatórios de acompanhamento para clientes Nova Tech.",
     "lang": "pt-BR"
 }
