--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -28,7 +28,8 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "nodemon": "^2.0.4"
   },
   "private": true
 }
