--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acompanhamento-i9pdv",
+  "name": "acompanhamento-pdv",
   "version": "0.2.0",
   "private": true,
   "description": "Projeto PWA para acompanhamento de PDV por relatório em texto incorporado.",
@@ -26,7 +26,6 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
-    "basic-ftp": "^4.5.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
