--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "version": "1.0.0",
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
@@ -13,7 +14,6 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "basic-ftp": "^4.5.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
@@ -21,8 +21,6 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
-    "ftp-client": "^0.2.2",
-    "jsftp": "^2.1.3",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
