--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "host": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@mdi/js": "^5.3.45",
